--- a/app/globals.css
+++ b/app/globals.css
@@ -15,13 +15,124 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+#hub-heading{
+  color: #f0b72f !important;
+}
+body, html {
+  font-kerning: normal;
+  font-weight: 500;
+  overflow-x : hidden !important;
+  overflow-y : hidden !important;
+  height: 100%;
+  scroll-behavior: smooth;
+  font-size: 14px;
+  line-height: 20px;
+}
+@media (max-width: 767px) {
+  body,html{
+    overflow-y : scroll !important;
+  }
+}
+.tab-container {
+display: flex;
+width: 100%;
+justify-content: space-around;
+/* background: rgba( 255, 255, 255, 0.25 ); */
+background: 'currentcolor';
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 20px );
+-webkit-backdrop-filter: blur( 20px );
+border-radius: 10px 10px 0 0;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+padding: 4px 4px 0 4px;
+}
+.tab {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffff;
+}
+.tab-active {
+  background: rgba( 255, 255, 255, 0.25 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 20px );
+  -webkit-backdrop-filter: blur( 20px );
+  border-radius: 5px 5px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 2px solid #f0b72f;
+  padding: 2px;
+  margin: 2px;
+  color: #ffff;
+}
+.radio-label{
+  color: #ffff;
+  padding: 4px;
+  display: flex;
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+}
+.radio-legend{
+  color: #ffff;
+}
+.radio-container{
+ padding: 4px;
+}
+.filter-actions {
+  padding: 10px;
+}
+.filterContainer {
+  max-height: 60vh;
+  height: 60vh;
+}
+/* total width */
+::-webkit-scrollbar {
+  background-color:transparent;
+  width: 6px;
+}
+
+/* background of the scrollbar except button or resizer */
+::-webkit-scrollbar-track {
+  background-color:transparent;
+}
+
+/* scrollbar itself */
+::-webkit-scrollbar-thumb {
+  background-color:#71767A;
+  border-radius:10px;
+}
+
+/* set button(top and bottom of the scrollbar) */
+::-webkit-scrollbar-button {display:none}
+.thumb-vertical {
+  position: relative;
+  display: block;
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
+  border-radius: inherit;
+  background-color: #f0b72f;
+}
+  @media (max-width: 767px) {
+    .filterContainer{ 
+    max-height: 30vh;
+    }
+  }
+
+.searchButton {
+    font-size: 1.2rem;
+    width: 100%;
+    color: #f0b72f;
+    border: 0.08em solid;
+    border-radius: 10px;
+    cursor: pointer;
+    padding: 8px;
+}
+.searchButton:hover {
+    color: #ffff;
+    background: #f0b62f64;
+  transition: 0.5s linear;
 }
